{
  "version": 4,
  "terraform_version": "1.8.0",
  "serial": 279,
  "lineage": "828eaf02-251e-53f8-6501-ed5794bf0076",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway",
      "name": "transit_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "amazon_side_asn": 64512,
            "arn": "arn:aws:ec2:eu-north-1:133067889278:transit-gateway/tgw-09bea0e6609082c03",
            "association_default_route_table_id": "tgw-rtb-012754c0ad82c2a5b",
            "auto_accept_shared_attachments": "disable",
            "default_route_table_association": "enable",
            "default_route_table_propagation": "enable",
            "description": "My Transit Gateway",
            "dns_support": "enable",
            "id": "tgw-09bea0e6609082c03",
            "multicast_support": "disable",
            "owner_id": "133067889278",
            "propagation_default_route_table_id": "tgw-rtb-012754c0ad82c2a5b",
            "vpn_ecmp_support": "enable"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "attachment_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-0cb03bf7039f8f504",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0781ef67c41043088"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-09bea0e6609082c03",
            "vpc_id": "vpc-0ebd8581f722078d7",
            "vpc_owner_id": "133067889278"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_subnet.subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "attachment_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-096ce5c71628af48c",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-06af91f200c1cfb28"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-09bea0e6609082c03",
            "vpc_id": "vpc-0de39e10499cdb698",
            "vpc_owner_id": "133067889278"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_ec2_transit_gateway_vpc_attachment",
      "name": "attachment_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "appliance_mode_support": "disable",
            "dns_support": "enable",
            "id": "tgw-attach-061125d59facf9b5b",
            "ipv6_support": "disable",
            "subnet_ids": [
              "subnet-0ced65d7159a1a4f5"
            ],
            "transit_gateway_default_route_table_association": true,
            "transit_gateway_default_route_table_propagation": true,
            "transit_gateway_id": "tgw-09bea0e6609082c03",
            "vpc_id": "vpc-0ff705edc460147b2",
            "vpc_owner_id": "133067889278"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_subnet.subnet_c",
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01dad638e8f31ab9a",
            "arn": "arn:aws:ec2:eu-north-1:133067889278:instance/i-022af5f6e1c212d7f",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_profile",
            "id": "i-022af5f6e1c212d7f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-098378fb57c1519b6",
            "private_dns": "ip-10-0-1-187.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.187",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-064198bacbd777447",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0781ef67c41043088",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c0714c42fb949c26"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.allow_from_vpc_c_to_a",
            "aws_subnet.subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "instance-b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01dad638e8f31ab9a",
            "arn": "arn:aws:ec2:eu-north-1:133067889278:instance/i-02d6a2da86768ad4b",
            "associate_public_ip_address": false,
            "availability_zone": "eu-north-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "ssm_profile",
            "id": "i-02d6a2da86768ad4b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0cbdde07dc455780d",
            "private_dns": "ip-10-1-1-73.eu-north-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.1.1.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0679834479b40fcfb",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06af91f200c1cfb28",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0badd699e21b26ed5"
            ]
          },
          "dependencies": [
            "aws_iam_instance_profile.ssm_profile",
            "aws_iam_role.ssm_role",
            "aws_security_group.allow_from_vpc_c_to_b",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:route-table/rtb-0d71c31831bd9d5e6",
            "id": "rtb-0d71c31831bd9d5e6",
            "owner_id": "133067889278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-09bea0e6609082c03",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebd8581f722078d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:route-table/rtb-0bc68c9ecbe6902c6",
            "id": "rtb-0bc68c9ecbe6902c6",
            "owner_id": "133067889278",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "10.2.0.0/16",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "tgw-09bea0e6609082c03",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de39e10499cdb698"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0265ff85b5a44b921",
            "route_table_id": "rtb-0d71c31831bd9d5e6",
            "subnet_id": "subnet-0781ef67c41043088"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.route_table_a",
            "aws_subnet.subnet_a",
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "association_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0af39c8a7d681e8ca",
            "route_table_id": "rtb-0bc68c9ecbe6902c6",
            "subnet_id": "subnet-06af91f200c1cfb28"
          },
          "dependencies": [
            "aws_ec2_transit_gateway.transit_gateway",
            "aws_route_table.route_table_b",
            "aws_subnet.subnet_b",
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_from_vpc_c_to_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:security-group/sg-0c0714c42fb949c26",
            "description": "Allow traffic from VPC C",
            "egress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c0714c42fb949c26",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_from_vpc_c_to_a",
            "name_prefix": "",
            "owner_id": "133067889278",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ebd8581f722078d7"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_from_vpc_c_to_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:security-group/sg-0badd699e21b26ed5",
            "description": "Allow traffic from VPC C",
            "egress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0badd699e21b26ed5",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.2.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "allow_from_vpc_c_to_b",
            "name_prefix": "",
            "owner_id": "133067889278",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0de39e10499cdb698"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "interface_endpoints_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:security-group/sg-08039d4362bc35745",
            "description": "Security group for interface endpoints without limitations",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08039d4362bc35745",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "interface_endpoints_sg",
            "name_prefix": "",
            "owner_id": "133067889278",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0ff705edc460147b2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:subnet/subnet-0781ef67c41043088",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0781ef67c41043088",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133067889278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0ebd8581f722078d7"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:subnet/subnet-06af91f200c1cfb28",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1a",
            "availability_zone_id": "eun1-az1",
            "cidr_block": "10.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06af91f200c1cfb28",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133067889278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0de39e10499cdb698"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:subnet/subnet-0ced65d7159a1a4f5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.2.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ced65d7159a1a4f5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133067889278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_c"
            },
            "tags_all": {
              "Name": "subnet_c"
            },
            "vpc_id": "vpc-0ff705edc460147b2"
          },
          "dependencies": [
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet_c2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:subnet/subnet-0e54d663f9ccbada2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-north-1c",
            "availability_zone_id": "eun1-az3",
            "cidr_block": "10.2.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e54d663f9ccbada2",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "133067889278",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnet_c2"
            },
            "tags_all": {
              "Name": "subnet_c2"
            },
            "vpc_id": "vpc-0ff705edc460147b2"
          },
          "dependencies": [
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc/vpc-0ebd8581f722078d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-07dba3ca94d8edf30",
            "default_route_table_id": "rtb-04454138e95a6d961",
            "default_security_group_id": "sg-09e86caca902824db",
            "dhcp_options_id": "dopt-008979768eb65f8bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ebd8581f722078d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04454138e95a6d961",
            "owner_id": "133067889278"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc/vpc-0de39e10499cdb698",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0bbc28e2ff4268282",
            "default_route_table_id": "rtb-04353afee2d1ecd37",
            "default_security_group_id": "sg-0b32f8e259f2c94f4",
            "dhcp_options_id": "dopt-008979768eb65f8bb",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0de39e10499cdb698",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04353afee2d1ecd37",
            "owner_id": "133067889278"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_c",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc/vpc-0ff705edc460147b2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.2.0.0/16",
            "default_network_acl_id": "acl-07ff7888e06b0512f",
            "default_route_table_id": "rtb-004b003136b021f58",
            "default_security_group_id": "sg-06196ee2e061843b9",
            "dhcp_options_id": "dopt-008979768eb65f8bb",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0ff705edc460147b2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-004b003136b021f58",
            "owner_id": "133067889278",
            "tags": {
              "Name": "vpc_c"
            },
            "tags_all": {
              "Name": "vpc_c"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages_endpoint_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc-endpoint/vpce-01f9f7094fbcfe2cf",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01f9f7094fbcfe2cf",
            "ip_address_type": "ipv4",
            "owner_id": "133067889278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09e86caca902824db"
            ],
            "service_name": "com.amazonaws.eu-north-1.ec2messages",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ebd8581f722078d7"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ec2_messages_endpoint_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc-endpoint/vpce-082488651fc66ce4f",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-082488651fc66ce4f",
            "ip_address_type": "ipv4",
            "owner_id": "133067889278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09e86caca902824db"
            ],
            "service_name": "com.amazonaws.eu-north-1.ec2messages",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ebd8581f722078d7"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc-endpoint/vpce-0f574e62235da13e2",
            "cidr_blocks": [
              "52.95.170.0/23",
              "3.5.216.0/22",
              "52.95.169.0/24",
              "16.12.10.0/23",
              "16.12.9.0/24"
            ],
            "dns_entry": [
              {
                "dns_name": "*.vpce-0f574e62235da13e2-juj65j4u.s3.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "*.vpce-0f574e62235da13e2-juj65j4u-eu-north-1c.s3.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0f574e62235da13e2",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00c55a8ce27e22fab"
            ],
            "owner_id": "133067889278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "prefix_list_id": "pl-c3aa4faa",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08039d4362bc35745"
            ],
            "service_name": "com.amazonaws.eu-north-1.s3",
            "state": "available",
            "subnet_ids": [
              "subnet-0ced65d7159a1a4f5"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff705edc460147b2"
          },
          "dependencies": [
            "aws_security_group.interface_endpoints_sg",
            "aws_subnet.subnet_c",
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "sqs_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc-endpoint/vpce-01cf268a3cd420f32",
            "dns_entry": [
              {
                "dns_name": "vpce-01cf268a3cd420f32-9uqlykho.sqs.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              },
              {
                "dns_name": "vpce-01cf268a3cd420f32-9uqlykho-eu-north-1c.sqs.eu-north-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z3OWWK6JFDEDGC"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01cf268a3cd420f32",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-08216395fec5379ef"
            ],
            "owner_id": "133067889278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-08039d4362bc35745"
            ],
            "service_name": "com.amazonaws.eu-north-1.sqs",
            "state": "available",
            "subnet_ids": [
              "subnet-0ced65d7159a1a4f5"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ff705edc460147b2"
          },
          "dependencies": [
            "aws_security_group.interface_endpoints_sg",
            "aws_subnet.subnet_c",
            "aws_vpc.vpc_c"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc-endpoint/vpce-0dd3ceefad28dbf61",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0dd3ceefad28dbf61",
            "ip_address_type": "ipv4",
            "owner_id": "133067889278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09e86caca902824db"
            ],
            "service_name": "com.amazonaws.eu-north-1.ssm",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ebd8581f722078d7"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_endpoint_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc-endpoint/vpce-0921d1b35114e577e",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0921d1b35114e577e",
            "ip_address_type": "ipv4",
            "owner_id": "133067889278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b32f8e259f2c94f4"
            ],
            "service_name": "com.amazonaws.eu-north-1.ssm",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0de39e10499cdb698"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages_endpoint_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc-endpoint/vpce-060032122c5ca7012",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-060032122c5ca7012",
            "ip_address_type": "ipv4",
            "owner_id": "133067889278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-09e86caca902824db"
            ],
            "service_name": "com.amazonaws.eu-north-1.ssmmessages",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0ebd8581f722078d7"
          },
          "dependencies": [
            "aws_vpc.vpc_a"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "ssm_messages_endpoint_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-north-1:133067889278:vpc-endpoint/vpce-05dcc7429121b9d5e",
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05dcc7429121b9d5e",
            "ip_address_type": "ipv4",
            "owner_id": "133067889278",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b32f8e259f2c94f4"
            ],
            "service_name": "com.amazonaws.eu-north-1.ssmmessages",
            "state": "available",
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0de39e10499cdb698"
          },
          "dependencies": [
            "aws_vpc.vpc_b"
          ]
        }
      ]
    }
  ]
}